[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/Main_Panel.gd" type="Script" id=1]
[ext_resource path="res://resources/HUD_Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/Waypoint_Select.gd" type="Script" id=3]
[ext_resource path="res://scenes/MFD_V3.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/MFD_Mode.gd" type="Script" id=6]
[ext_resource path="res://assets/ICAWS/ICAWS_background.bmp" type="Texture" id=8]
[ext_resource path="res://assets/ND/ND_Background.bmp" type="Texture" id=9]
[ext_resource path="res://assets/ND/ND_Rose.bmp" type="Texture" id=11]
[ext_resource path="res://resources/Display_Font.tres" type="DynamicFont" id=14]
[ext_resource path="res://assets/Panels/DU_Background.bmp" type="Texture" id=15]
[ext_resource path="res://scenes/UpFrontControls.tscn" type="PackedScene" id=16]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0588235, 0.721569, 0.85098, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[node name="Main_Panel" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MFD" type="Sprite" parent="."]
position = Vector2( 1654.36, 816.303 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Page_KEYS" type="RichTextLabel" parent="MFD"]
visible = false
margin_left = -201.0
margin_top = -119.0
margin_right = 205.0
margin_bottom = 218.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 14 )
bbcode_enabled = true
bbcode_text = "[color=#11aafe]Engine:[/color]
Throttle up: W
Throttle down: S
[color=#11aafe]Control surfaces (primary):[/color]
Pitch up: K
Pitch down: I
Roll right: L
Roll left: J
Yaw right: O
Yaw left: U
[color=#11aafe]Control surfaces (secondary):[/color]
Flaps up: A
Flaps down: D
Trim up: H
Trim down: Y
[color=#11aafe]Gear:[/color]
Gear toggle: G
[color=#11aafe]Autoflight:[/color]
Autopilot toggle: Z 
[color=#11aafe]Weapons: [/color]
Station 1: 1
Station 2: 2
Station 3: 3
Station 4: 4
[color=#11aafe]Camera:[/color]
Toggle: C"
text = "Engine:
Throttle up: W
Throttle down: S
Control surfaces (primary):
Pitch up: K
Pitch down: I
Roll right: L
Roll left: J
Yaw right: O
Yaw left: U
Control surfaces (secondary):
Flaps up: A
Flaps down: D
Trim up: H
Trim down: Y
Gear:
Gear toggle: G
Autoflight:
Autopilot toggle: Z 
Weapons: 
Station 1: 1
Station 2: 2
Station 3: 3
Station 4: 4
Camera:
Toggle: C"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page_CHECKLIST" type="RichTextLabel" parent="MFD"]
margin_left = -201.0
margin_top = -119.0
margin_right = 205.0
margin_bottom = 195.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 14 )
bbcode_enabled = true
bbcode_text = "[color=#11aafe]PREFLIGHT[/color]
GEAR - DN
FLAPS - 0
TRIM - 0.0
A/P - OFF
[color=#11aafe]TAKEOFF[/color]
FLAPS - 2
TRIM - 0.3
MEMO - REVIEW
V SPEEDS - CHECK
[color=#11aafe]CLIMB[/color]
GEAR - UP
FLAPS - 0
[color=#11aafe]CRUISE[/color]
A/P - AS RQRD
[color=#11aafe]DESCENT[/color]
A/P - OFF
MEMO - REVIEW
V SPEEDS - CHECK
TRIM - 0.4 / AS RQRD
[color=#11aafe]LANDING[/color]
FLAPS - 4
GEAR - DN"
text = "PREFLIGHT
GEAR - DN
FLAPS - 0
TRIM - 0.0
A/P - OFF
TAKEOFF
FLAPS - 2
TRIM - 0.3
MEMO - REVIEW
V SPEEDS - CHECK
CLIMB
GEAR - UP
FLAPS - 0
CRUISE
A/P - AS RQRD
DESCENT
A/P - OFF
MEMO - REVIEW
V SPEEDS - CHECK
TRIM - 0.4 / AS RQRD
LANDING
FLAPS - 4
GEAR - DN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page_MEMO" type="RichTextLabel" parent="MFD"]
visible = false
margin_left = -201.0
margin_top = -119.0
margin_right = 205.0
margin_bottom = 196.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 14 )
bbcode_enabled = true
bbcode_text = "[color=#11aafe]Flying:[/color]
See left MFD for PFD with flight data. All units are SI units for now. 
Rotate at VR with flaps as per checklist, land at VAPP with flaps as per checklist. Do not exceed VNE or fly below VS.

[color=#11aafe]V Speeds:[/color]
V1: 50
VR: 60
V2: 70

VAPP: 60

VS: 45
VNE: 150
"
text = "Flying:
See left MFD for PFD with flight data. All units are SI units for now. 
Rotate at VR with flaps as per checklist, land at VAPP with flaps as per checklist. Do not exceed VNE or fly below VS.

V Speeds:
V1: 50
VR: 60
V2: 70

VAPP: 60

VS: 45
VNE: 150
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D_1" type="Line2D" parent="MFD"]
visible = false
light_mask = 2
position = Vector2( -225.597, -139.343 )
points = PoolVector2Array( 0, 0, 450, 0 )
width = 5.0
default_color = Color( 0.537255, 0.537255, 0.537255, 1 )

[node name="MFD_Mode" type="MenuButton" parent="MFD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -276.225
margin_top = -231.122
margin_right = -216.225
margin_bottom = -202.122
custom_fonts/font = ExtResource( 14 )
text = "MENU"
flat = false
items = [ "KEYS", null, 0, false, false, 0, 0, null, "", false, "CHECKLIST", null, 0, false, false, 1, 0, null, "", false, "MEMO", null, 0, false, false, 2, 0, null, "", false, "NAV", null, 0, false, false, 3, 0, null, "", false ]
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Thrust_Indicator" type="ProgressBar" parent="MFD"]
margin_left = -196.278
margin_top = -201.492
margin_right = -96.2782
margin_bottom = -176.492
custom_fonts/font = ExtResource( 14 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MFD/Thrust_Indicator"]
margin_left = 14.0
margin_top = -27.0
margin_right = 86.0
margin_bottom = -4.0
custom_fonts/font = ExtResource( 14 )
text = "THRUST"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Page_NAV" type="Light2D" parent="MFD"]
visible = false
light_mask = 4
position = Vector2( 0, 40 )
texture = ExtResource( 9 )
mode = 3
range_item_cull_mask = 4

[node name="ND_Rose" type="Sprite" parent="MFD/Page_NAV"]
light_mask = 4
position = Vector2( 0, 94 )
scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 11 )

[node name="NAV1_Pointer" type="Line2D" parent="MFD/Page_NAV/ND_Rose"]
light_mask = 4
scale = Vector2( 0.625, 0.625 )
points = PoolVector2Array( 0, -150, -10, -150, 0, -170, 10, -150, 0, -150, 0, 150, 10, 150, 10, 170, 0, 160, -10, 170, -10, 170, -10, 150, 0, 150, 0, -150 )
width = 5.0
default_color = Color( 0.670588, 0.670588, 0.670588, 1 )

[node name="HDG_Pointer" type="Line2D" parent="MFD/Page_NAV"]
position = Vector2( 0, -160 )
points = PoolVector2Array( -5, 0, 5, 0, 0, 10, -5, 0 )
width = 2.0
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Waypoint_Select" type="MenuButton" parent="MFD/Page_NAV"]
margin_left = -245.947
margin_top = -166.729
margin_right = -149.947
margin_bottom = -137.729
custom_fonts/font = ExtResource( 14 )
text = "WPT ID"
flat = false
items = [ "WPT 01", null, 0, false, false, 0, 0, null, "", false, "WPT 02", null, 0, false, false, 1, 0, null, "", false, "WPT 03", null, 0, false, false, 2, 0, null, "", false ]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Waypoint_ID" type="Label" parent="MFD/Page_NAV"]
margin_left = 161.518
margin_top = -162.878
margin_right = 233.518
margin_bottom = -139.878
custom_fonts/font = ExtResource( 14 )
text = "WPT XX"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Waypoint_Dist" type="Label" parent="MFD/Page_NAV"]
margin_left = 162.148
margin_top = -132.64
margin_right = 234.148
margin_bottom = -109.64
custom_fonts/font = ExtResource( 14 )
text = "XXX KM"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Waypoint_ETA" type="Label" parent="MFD/Page_NAV"]
visible = false
margin_left = 163.408
margin_top = -104.922
margin_right = 235.408
margin_bottom = -81.9219
custom_fonts/font = ExtResource( 14 )
text = "XX.XXZ"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boresight" type="Line2D" parent="."]
visible = false
position = Vector2( 960, 540 )
scale = Vector2( 2, 2 )
z_index = 1
points = PoolVector2Array( -40, 0, -20, 0, -10, 10, 0, 0, 10, 10, 20, 0, 40, 0 )
width = 2.0
default_color = Color( 0.176471, 0.756863, 0.176471, 1 )
antialiased = true

[node name="Speed_Data" type="Label" parent="."]
visible = false
light_mask = 8
margin_left = 20.0
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 198.0
size_flags_vertical = 0
custom_colors/font_color = Color( 0.156863, 0.858824, 0.0823529, 1 )
custom_fonts/font = ExtResource( 2 )
text = "SPEED
XXX"
uppercase = true

[node name="Heading_Data" type="Label" parent="."]
visible = false
light_mask = 8
margin_left = 20.0
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 198.0
size_flags_vertical = 0
custom_colors/font_color = Color( 0.156863, 0.858824, 0.0823529, 1 )
custom_fonts/font = ExtResource( 2 )
text = "HDG
XXX"
align = 1
uppercase = true

[node name="Alt_Data" type="Label" parent="."]
visible = false
light_mask = 8
margin_left = 20.0
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 198.0
size_flags_vertical = 0
custom_colors/font_color = Color( 0.156863, 0.858824, 0.0823529, 1 )
custom_fonts/font = ExtResource( 2 )
text = "ALT
XXXXX"
align = 2
uppercase = true

[node name="Background" type="Sprite" parent="."]
light_mask = 0
position = Vector2( 960, 540 )
z_index = -2
texture = ExtResource( 15 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="UpFrontControls" parent="." instance=ExtResource( 16 )]
margin_left = 20.0
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 288.0
size_flags_horizontal = 1
alignment = 1

[node name="Sliders" type="HBoxContainer" parent="."]
margin_left = 748.0
margin_top = 560.0
margin_right = 1172.0
margin_bottom = 1060.0
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Flaps" type="VSlider" parent="Sliders"]
margin_right = 100.0
margin_bottom = 500.0
rect_min_size = Vector2( 100, 500 )
size_flags_horizontal = 4
size_flags_vertical = 8
min_value = -1.0
max_value = 1.0
step = 0.25
tick_count = 9
ticks_on_borders = true

[node name="Label_01" type="Label" parent="Sliders/Flaps"]
margin_left = 20.2272
margin_top = -36.7086
margin_right = 80.2272
margin_bottom = -11.7086
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 14 )
text = "FLAPS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Throttle" type="VSlider" parent="Sliders"]
margin_left = 108.0
margin_right = 208.0
margin_bottom = 500.0
rect_min_size = Vector2( 100, 500 )
size_flags_horizontal = 4
size_flags_vertical = 8
max_value = 1.0
step = 0.01
tick_count = 20
ticks_on_borders = true

[node name="Label_02" type="Label" parent="Sliders/Throttle"]
margin_left = 20.2272
margin_top = -36.7086
margin_right = 80.2272
margin_bottom = -11.7086
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 14 )
text = "THR"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Trim" type="VSlider" parent="Sliders"]
margin_left = 216.0
margin_right = 316.0
margin_bottom = 500.0
rect_min_size = Vector2( 100, 500 )
size_flags_horizontal = 4
size_flags_vertical = 8
min_value = -1.0
max_value = 1.0
step = 0.01
tick_count = 20
ticks_on_borders = true

[node name="Label_03" type="Label" parent="Sliders/Trim"]
margin_left = 20.2272
margin_top = -36.7086
margin_right = 80.2272
margin_bottom = -11.7086
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 14 )
text = "TRIM"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gear" type="VSlider" parent="Sliders"]
margin_left = 324.0
margin_right = 424.0
margin_bottom = 500.0
rect_min_size = Vector2( 100, 500 )
size_flags_horizontal = 4
size_flags_vertical = 8
min_value = -1.0
max_value = 0.0
value = -1.0
rounded = true
ticks_on_borders = true

[node name="Label_04" type="Label" parent="Sliders/Gear"]
margin_left = 20.2272
margin_top = -36.7086
margin_right = 80.2272
margin_bottom = -11.7086
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 14 )
text = "GEAR"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MFD_V3_L" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 400 )
scale = Vector2( 0.6, 0.6 )
